--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "config": "^3.3.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "spotify-web-api-node": "^4.0.0"
   }
